--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -59,7 +59,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        jdk: [11, 17, 21, 22]
+        jdk: [21, 22]
         maven: [3.9.6]
         image: [java]
     env:
