--- a/.github/workflows/java_jni.yml
+++ b/.github/workflows/java_jni.yml
@@ -56,6 +56,8 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ !contains(github.event.pull_request.title, 'WIP') }}
     timeout-minutes: 240
+    env:
+      JDK: 21
     steps:
       - name: Set up JDK 21
         uses: actions/setup-java@v3
@@ -134,6 +136,7 @@ jobs:
           ARCHERY_DOCKER_USER: ${{ secrets.DOCKERHUB_USER }}
           ARCHERY_DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
           DEVELOCITY_ACCESS_KEY: ${{ secrets.GE_ACCESS_TOKEN }}
+          JDK: 21
         run: |
           archery docker run \
             -e CI=true \
